--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,13 +9,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
     <meta name="generator" content="Eleventy" />
-
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ hash['/css/styles.css'] | url }}"/>
     <script defer src="{{ hash['/js/scripts.js'] | url }}"></script>
 
     {% block head %}{% endblock %}
   </head>
-  <body class="antialiased">
+  <body class=" bg-cream">
     {% block content %}
       {{ content | safe }}
     {% endblock %}
