--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,40 @@
 ---
-title: YATAS
+title: Product preview card component
 description: Yet Another Tailwind Alpine Starter Project for 11ty!
 layout: layouts/base.njk
 ---
-<div class="flex items-center justify-center w-full min-h-screen" x-init="console.log('Hello from Alpine.js')">
-  <img src="img/logo.svg" class="w-1/3 h-auto max-w-full" width="220" height="150" alt="YATAS Logo" />
-</div>
+<main class="flex items-center justify-center w-full min-h-screen duration-300" x-init="console.log('Hello from Alpine.js')">
+  
+    <div class="rounded-xl overflow-clip shadow-sm duration-300 hover:-translate-y-1 hover:shadow-2xl bg-white m-4 sm:m-0 font-medium sm:grid sm:grid-cols-2 sm:max-w-screen-sm group">
+      <div class="overflow-hidden">     
+        <picture class="">
+          <source srcset="img/image-product-desktop.jpg" media="(min-width: 640px)">
+          <source srcset="img/image-product-mobile.jpg" media="(min-width: 20px)">
+          <img class="group-hover:scale-105 duration-500 sm:object-cover sm:w-full sm:h-full" src="img/image-product-mobile.jpg" alt="Image of Chanel Parfum" loading="lazy" decoding="async">
+        </picture>
+      </div>
+      <div class="p-6 sm:p-10">
+        <h2 class="uppercase tracking-[3px] sm:tracking-[4px] text-gray-blue text-sm sm:text-[15px] antialiased">Perfume</h2>
+        <h1 class="text-3xl sm:text-4xl font-serif leading-none mt-2 sm:mt-4 mb-4 sm:mb-6 text-dark-blue">Gabrielle Essence Eau De Parfum</h1>
+        <p class="text-gray-blue mb-6 antialiased text-[15px]">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+        <div class="flex items-center">
+          <span class="text-4xl font-serif text-cyan">$149.99</span>
+          <span class="text-gray-blue line-through ml-4 text-sm">$169.99</span>
+        </div>
+        <button x-data="{ added: false }" x-on:click="added = ! added" x-on:click.outside="added = false"  class="relative bg-cyan font-medium w-full text-white h-14 rounded-md mt-4 sm:mt-6 duration-300 hover:bg-dark-blue focus:bg-dark-blue focus:ring-dark-blue focus:shadow-2xl focus:-translate-y-2 outline-none ring-4 ring-transparent  hover:shadow-2xl hover:-translate-y-2">
+          <div :class="added ? 'hidden duration-300' : ''" class="duration-300 flex justify-center items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+            </svg>
+            Add to Cart
+          </div>
+          <div x-show="added" x-transition :class="added ? 'duration-300' : 'hidden'" class="duration-300 flex justify-center items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+            </svg>
+            Added to Cart
+          </div>
+        </button>
+      </div>
+    </div>
+</main>
